[package]
name = "sc-cli"
version = "0.36.0"
authors.workspace = true
description = "Substrate CLI interface."
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes = { workspace = true, default-features = true }
chrono = { workspace = true }
clap = { features = ["derive", "string", "wrap_help"], workspace = true }
fdlimit = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
libp2p-identity = { features = ["ed25519", "peerid"], workspace = true }
log = { workspace = true, default-features = true }
names = { workspace = true }
codec = { workspace = true, default-features = true }
rand = { workspace = true, default-features = true }
regex = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true, default-features = true }
thiserror = { workspace = true }
# personal fork here as workaround for: https://github.com/rust-bitcoin/rust-bip39/pull/64
bip39 = { package = "parity-bip39", version = "2.0.1", features = ["rand"] }
tokio = { version = "1.22.0", features = [
    "parking_lot",
    "rt-multi-thread",
    "signal",
] }
sc-client-api = { path = "../api" }
sc-client-db = { path = "../db", default-features = false }
sc-keystore = { path = "../keystore" }
sc-mixnet = { path = "../mixnet" }
sc-network = { path = "../network" }
sc-service = { path = "../service", default-features = false }
sc-telemetry = { path = "../telemetry" }
sc-tracing = { path = "../tracing" }
sc-utils = { path = "../utils" }
sp-blockchain = { path = "../../primitives/blockchain" }
sp-core = { path = "../../primitives/core" }
sp-keyring = { path = "../../primitives/keyring" }
sp-keystore = { path = "../../primitives/keystore" }
sp-panic-handler = { path = "../../primitives/panic-handler" }
sp-runtime = { path = "../../primitives/runtime" }
sp-version = { path = "../../primitives/version" }
schnorrkel = { git = "https://github.com/Fiono11/schnorrkel", branch = "final_frost", features = [
    "alloc",
    "aead",
] }
hex = "0.4.3"
subxt = "0.37.0"
color-eyre = "0.6.3"
scale-value = { version = "0.16.0", default-features = false }
subxt-signer = { version = "0.36.0", features = ["sr25519"] }

[dev-dependencies]
tempfile = { workspace = true }
futures-timer = { workspace = true }
sp-tracing = { workspace = true, default-features = true }

[features]
default = ["rocksdb"]
rocksdb = ["sc-client-db/rocksdb"]
